deploy/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  type: NodePort
  selector:
    app: hello
  ports:
  - name: http
    port: 80
    targetPort: 8080
